Исправить сервис статистики для прохождения тестов